# kattis

./: Cargo.toml  README.md
anti_arithmetic/: Cargo.toml
anti_arithmetic/src/: main.rs
closest_sum/: Cargo.toml
closest_sum/src/: main.rs
easiest_problem/: Cargo.toml
easiest_problem/src/: main.rs
even_up_solitaire/: Cargo.toml
even_up_solitaire/src/: main.rs
iboard/: Cargo.toml
iboard/src/: main.rs
math_homework/: Cargo.toml
math_homework/src/: main.rs
mixed_fractions/: Cargo.toml
mixed_fractions/src/: main.rs
prob_99_problems/: Cargo.toml
prob_99_problems/src/: main.rs
sum_of_others/: Cargo.toml
sum_of_others/src/: main.rs
tetration/: Cargo.toml
tetration/src/: main.rs
vauvau/: Cargo.toml
vauvau/src/: main.rs
