[workspace]
members = [
  "mixed_fractions",
  "prob_99_problems",
  "even_up_solitaire",
  "closest_sum"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Arnab De<arkrde@gmail.com>", "Debomita Saha De<dsahade@gmail.com>"]
license-file = "LICENSE"
description = "Solution to various Kattis problems"
categories = ["competitive programming"]
